done the structure need to design a bit the product

--- a/style.css
+++ b/style.css
@@ -1,33 +1,84 @@
- h1 {
-        text-align: center;
-    }
-
-.my_profile {
-        position: relative;
-        left: 200px;
-        padding-top: 100px;
-        display: flex;
+body{
+    margin:0;
+    font-family: "Commissioner", sans-serif;;
+    background-color: black;
 }
 
-.prof_picture{
-        border-radius: 25px;
-            
-} 
-
-p {
-    float: right;
-    padding-left: 200px;
-}
-
-.header {         
-    margin-right:25px;
-}
-
-.test{
+.header{
+    color: white;
+    padding: 20px;
     display: flex;
+    justify-content: space-between;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+hr{
+    background-color: white;
+    border: none;
+    color: black;
+    margin: 0;
+    height: 2px;
+    width: 100%;
+}
+
+.top{
+    height: 90vh;
+    background-color: black;
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
-img{
+
+.container1{
+    width: 90%;
+    max-width: 1200px;
+    min-height: 80vh;
+    background-color: #ede1da;
+    margin-bottom: -100px;
+    border-radius: 20px 20px 0 0;
+    
     display: flex;
+    justify-content: center;
+    align-items: center;
+
+    flex-direction: column;
+}
+h1{
+    font-size: 100px;
+}
+.about-me{
+    display: flex;
+    width: 100%;
+    max-width: 800px;
+    gap: 40px;
+}
+
+
+.profile-picture{
+    border-radius: 20px;
+    height: 50vh;
+    margin-left: -40px;
+}
+
+.bottom{
+    height: 70vh;
+    background-color: white;  
+}
+
+.container2{
+    padding-top: 100px;
+}
+
+.product{
+
+}
+
+h2{
+  margin-left: 20%;  
+  font-size: 30px;
 }
 
