--- a/style2.css
+++ b/style2.css
@@ -29,6 +29,7 @@ hr{
 }
 .top{
     height: 90vh;
+    color: white;
     background-color: black;
     display: flex;
     align-items: center;
@@ -48,7 +49,7 @@ hr{
     color: white;
 }
 
-h3,h4{
+.price h4{
     color: white;
 }
 
@@ -58,7 +59,7 @@ h3,h4{
     gap: 4px;
 }
 
-.price h4, .price h3{
+.price h4, .price input{
     margin: 0;
 }
 
