--- a/style1.css
+++ b/style1.css
@@ -6,6 +6,7 @@ body{
 
 .header{
     color: white;
+    font-size: 20px;
     padding: 20px;
     display: flex;
     justify-content: space-between;
